# typst-plum

./: CHANGELOG.md  Justfile  README.md  typst.toml
docs/: man-style.typ  manual.typ  template.typ  thumbnail.typ
gallery/: thumbnail.typ
plugin/: Cargo.toml
plugin/src/: ast.rs  grammar.lalrpop  lib.rs  model.rs  parser.rs
plugin/src/model/: classifier.rs  edge.rs  helpers.rs
plugin/src/model/classifier/: attribute.rs  operation.rs
plugin/src/parser/: grammar.lalrpop  mod.rs
src/: classifier.typ  diagram.typ  e-classifier.typ  e-diagram.typ  e-edge.typ  edge.typ  imports.typ  lib.typ  package.typ  parser.wasm
tests/edges/: test.typ
tests/unit/: test.typ
tests/unit1/: test.typ
