[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = "0.2.2"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
serde = { version = "1.0.213", features = ["derive"] }
wasm-minimal-protocol = "0.1.0"

[build-dependencies]
lalrpop = "0.22.0"
